[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enemyBlob.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/sprEnemyBlob.png" type="Texture" id=2]

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("animatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "steppedOn"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("animatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, -3.5 ), Vector2( 0, -8.5 ), Vector2( 0, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animatedSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 0.5 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 14, 7 )

[node name="enemyBlob" type="KinematicBody2D" groups=["Blob"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 16 )
anims/steppedOn = SubResource( 17 )

[node name="tween" type="Tween" parent="."]

[node name="animatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 0, -7 )
frames = SubResource( 14 )
frame = 1
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 15 )

[node name="rcFront" type="RayCast2D" parent="."]
position = Vector2( 14, -7 )
z_index = 500
enabled = true
cast_to = Vector2( 2, 0 )
collision_mask = 6

[node name="rcBack" type="RayCast2D" parent="."]
position = Vector2( -14, -7 )
z_index = 500
enabled = true
cast_to = Vector2( -2, 0 )
collision_mask = 6

[node name="rcFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -14, 0 )
z_index = 500
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 6
collide_with_areas = true

[node name="rcFloorRight" type="RayCast2D" parent="."]
position = Vector2( 14, 0 )
z_index = 500
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 6

[node name="timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
